connected html to css file

--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
-<!-- 
-
-Hello Camper!
-
-For now, the test suite only works in Chrome! Please read the README below in the JS Editor before beginning. Feel free to delete this message once you have read it. Good luck and Happy Coding! 
-
-- The freeCodeCamp Team 
-
--->
-
-<header id="header">
-  <img id="header-img" src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTq-Tm1pUc3UGSjSWGKOEdLztsKW85wTM-QeA&usqp=CAU">
-  <nav id="nav-bar">
-    <a class="nav-link" href="#about">About</a>
-    <a class="nav-link" href="#video">Stock Video</a>
-    <a class="nav-link" href="#email">Info</a>
-  </nav>
-</header>
-  <h2>About</h2>
-  <section id="about">
-    <div>Advanced AI</div>
-    <div>Real-time Signal Notification</div>
-    <div>Place your buy order</div>
-    <div>Place your LIMIT
-      SELL Order</div>
-    <div>Sit back and relax...</div>
-  </section> 
-  <h2>Stock video</h2>
-  <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/h4u3lBba4IY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <h2>Want more Info</h2>
-  <form action="https://www.freecodecamp.com/email-submit" id="form">
-    <input id="email" type="email" name="email" placeholder="Shandonmith@gmail.com">
-    <input id="submit" type="submit">
-  </form>
- 
-  
-</header>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header id="header">
+      <img id="header-img" src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTq-Tm1pUc3UGSjSWGKOEdLztsKW85wTM-QeA&usqp=CAU">
+      <nav id="nav-bar">
+        <a class="nav-link" href="#about">About</a>
+        <a class="nav-link" href="#video">Stock Video</a>
+        <a class="nav-link" href="#email">Info</a>
+      </nav>
+    </header>
+      <h2>About</h2>
+      <section id="about">
+        <div>Advanced AI</div>
+        <div>Real-time Signal Notification</div>
+        <div>Place your buy order</div>
+        <div>Place your LIMIT
+          SELL Order</div>
+        <div>Sit back and relax...</div>
+      </section>
+      <h2>Stock video</h2>
+      <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/h4u3lBba4IY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h2>Want more Info</h2>
+      <form action="https://www.freecodecamp.com/email-submit" id="form">
+        <input id="email" type="email" name="email" placeholder="Shandonmith@gmail.com">
+        <input id="submit" type="submit">
+      </form>
+    </header>
+  </body>
+</html>
